--- a/notebooks/understanding_supervised_learning.ipynb
+++ b/notebooks/understanding_supervised_learning.ipynb
@@ -503,9 +503,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:m3_env]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-m3_env-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -517,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
